--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/utilities": "^3.2.2",
+    "chance": "^1.1.13",
+    "change": "^0.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.0",
     "react": "^19.0.0",
